<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.myapplication.fragment.PokemonInfoFragment">

    <TextView
        android:id="@+id/pokemonInfoName"
        style="@style/TextStyle"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:text="@string/defaultName"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoImage"
        app:layout_constraintEnd_toStartOf="@+id/favoriteBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favoriteBtn"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@drawable/no_favorite_star"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoExp"
        app:layout_constraintEnd_toStartOf="@+id/changeInfoBtn"
        app:layout_constraintStart_toEndOf="@+id/pokemonInfoName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeInfoBtn"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_icon"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoExp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favoriteBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pokemonInfoImage"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/all_circle_white_bg"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoUserParams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoName" />

    <TextView
        android:id="@+id/pokemonInfoWeight"
        style="@style/TextStyle"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoUserParams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokemonInfoImage"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoHeight" />

    <TextView
        android:id="@+id/pokemonInfoHeight"
        style="@style/TextStyle"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokemonInfoImage"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoExp" />

    <TextView
        android:id="@+id/pokemonInfoExp"
        style="@style/TextStyle"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:text="@string/exp"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokemonInfoImage"
        app:layout_constraintTop_toBottomOf="@+id/favoriteBtn" />

    <EditText
        android:id="@+id/pokemonInfoUserParams"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:enabled="false"
        android:hint="@string/add_your_comment"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoBaseStatsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoImage" />

    <TextView
        android:id="@+id/pokemonInfoBaseStatsText"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_stats"
        app:layout_constraintBottom_toTopOf="@+id/pokemonInfoStatsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoUserParams" />

    <ListView
        android:id="@+id/pokemonInfoStatsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonInfoBaseStatsText" />

</androidx.constraintlayout.widget.ConstraintLayout>